[package]
name = "fluent-langneg"
description = """
A library for language and locale negotiation.
"""
version = "0.13.0"
authors = ["Zibi Braniecki <gandalf@mozilla.com>"]
homepage = "http://projectfluent.org/"
license = "Apache-2.0"
repository = "https://github.com/projectfluent/fluent-langneg"
readme = "README.md"
categories = ["internationalization", "localization"]
edition = "2021"
include = [
	"src/**/*",
	"benches/*.rs",
	"Cargo.toml",
	"README.md"
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
unic-langid = "0.9"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unic-langid = { version = "0.9", features = ["macros"] }
unic-locale = { version = "0.9", features = ["macros"] }
criterion = "0.3"

[[bench]]
name = "negotiate"
harness = false

[features]
default = []
cldr = ["unic-langid/likelysubtags"]
